--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./demo.css" type="text/css">
+    <script src="tilebelt/index.js"></script>
     <script async src="index.js"></script>
 
     <title>HighArc Challenge</title>
