getting correct image based on data entered

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <canvas id="glcanvas" width="640" height="480"></canvas>
     <form >
       <label for="lat">Lat:</label>
-      <input type="text" id="lat" name="lat"><br><br>
+      <input type="text" id="lat" name="lat" value = "27.987514"><br><br>
       <label for="Lon">Lon:</label>
-      <input type="text" id="lon" name="lon"><br><br>
+      <input type="text" id="lon" name="lon" value = "86.924203"><br><br>
       <label for="zoom">Zoom:</label>
-      <input type="text" id="zoom" name="zoom"><br><br>
+      <input type="text" id="zoom" name="zoom" value = '14'><br><br>
       <input type="button" id="btn" value="GO" />
     </form>
     <img id="hiddenImg" />
