loading image into canvas

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <input type="text" id="zoom" name="zoom" value = '14'><br><br>
       <input type="button" id="btn" value="GO" />
     </form>
-    <img id="hiddenImg" />
+    <canvas id="hiddenCanvas" width="256" height="256">
+    </canvas>
   </body>
 </html>
