Three.js example is working

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./demo.css" type="text/css">
     <script src="tilebelt/index.js"></script>
-    <script async src="index.js"></script>
+    <script type="module" async src="index.js"></script>
 
     <title>HighArc Challenge</title>
   </head>
 
   <body>
-    <canvas id="glcanvas" width="640" height="480"></canvas>
+    <canvas id="canvas" width="640" height="480"></canvas>
     <form >
       <label for="lat">Lat:</label>
       <input type="text" id="lat" name="lat" value = "27.987514"><br><br>
